working on react also for the front end

--- a/FrontEnd/Html/BidderDashBoard.html
+++ b/FrontEnd/Html/BidderDashBoard.html
@@ -11,21 +11,26 @@
     <div class="wrapper">
         <div class="navBar">
             <h1 class="logo">Stone <p>Code</p>Auction</h1>
-
-            <div id="search-form">
-                <input type="text" placeholder="Search here...">
-                <button type="submit" class="search-button">Search</button>
-                <div id="search-error-message"></div>
-            </div>
-            <div id="user"></div>
-            <div id="content">
-                <div id="bid-container">
-
-
-                    </div>
-                </div>
+            <img src="../image/Profile%20Circle%20-%20192x192.png" alt="" id="profile" class="profile">
+        </div>
+        <div id="user"></div>
+        <div id="content">
+            <div id="bid-container">
             </div>
         </div>
+        <div id="profileBar" class="sidebar">
+            <div class="editing-tool">
+                <a href="#" id="closeSidebar">←</a>
+                <a href="#" id="edit-button">✏️</a>
+            </div>
+            <h3>Your Profile</h3>
+            <p id="profile-image"></p>
+            <i class="fas fa-camera"></i>
+            <span>Change Photo</span>
+            <div id="user-profile"></div>
+            <div id="edit-form"></div>
+        </div>
     </div>
+
 </body>
 </html>
