--- a/FrontEnd/Html/Login.html
+++ b/FrontEnd/Html/Login.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../Ccs/Login.css">
-    <script src="../JavaScript/homePage.js" defer></script>
+    <script src="../JavaScript/login.js" defer></script>
     <title>Home Page</title>
 </head>
     <body>
