--- a/FrontEnd/Html/BidderDashBoard.html
+++ b/FrontEnd/Html/BidderDashBoard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BidderDashBoard page</title>
+    <title>DashBoard page</title>
     <link rel="stylesheet" href="../Ccs/BidderDashBoard.css">
     <script src="../JavaScript/BidderDashBoard.js" defer></script>
 
